--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Thomas Burton <tburton5572@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
